# wiki-masters-tag

./: .gitignore  Cargo.toml  README.md  config.example.yml
.github/workflows/: ci.yml  release.yml
src/: local_state.rs  main.rs  migrate_dump.rs
src/api/: mod.rs
src/wikipedia/: mod.rs
