[package]
name = "wiki-masters-tag"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full", "sync"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.102"
mediawiki_rest_api = "0.2.1"
regex = "1.12.3"
serde_yaml = "0.9.34"
color = "0.3.3"
hex_color = {version = "3.0.0", features = ["std", "rand", "serde"] }
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio"] }
rusqlite = "=0.32.1"
clap = { version = "4.6.1", features = ["derive"] }
nom = "8.0.0"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
base64 = "0.22.1"
futures = "0.3.32"
flate2 = "1.1.9"
tokio-util = "0.7.18"
indicatif = "0.18.4"
rayon = "1.12.0"
rand = "0.10.1"
chrono = { version = "0.4.44", features = ["serde"]}
itertools = "0.14.0"
